conf/iptables.conf
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:INPUT DROP [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:inputdrop - [0:0]
:forwarddrop - [0:0]
:outputdrop - [0:0]

#
# INPUT chain
#

# Loopback is okay.
-A INPUT -i lo -j ACCEPT

# Bad actors.
-A INPUT -p tcp -m tcp -s 5.9.73.27/32 -j DROP
-A INPUT -p tcp -m tcp -s 5.231.88.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 24.234.15.218/32 -j DROP
-A INPUT -p tcp -m tcp -s 34.234.113.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 37.187.94.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 40.77.167.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 43.254.57.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 43.254.59.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 46.229.168.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 66.70.174.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 66.249.0.0/16 -j DROP
-A INPUT -p tcp -m tcp -s 77.75.78.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 82.5.74.204/32 -j DROP
-A INPUT -p tcp -m tcp -s 82.41.90.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 123.126.113.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 144.76.7.79/32 -j DROP
-A INPUT -p tcp -m tcp -s 157.55.39.71/32 -j DROP
-A INPUT -p tcp -m tcp -s 159.69.188.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 159.69.183.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 169.239.45.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 173.208.130.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 176.249.254.153/32 -j DROP
-A INPUT -p tcp -m tcp -s 178.193.252.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 180.76.15.135/24 -j DROP
-A INPUT -p tcp -m tcp -s 188.68.32.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 188.68.42.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 195.201.105.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 195.254.135.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 207.180.0.0/16 -j DROP
-A INPUT -p tcp -m tcp -s 207.46.13.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 209.95.51.0/24 -j DROP
-A INPUT -p tcp -m tcp -s 217.73.208.146/32 -j DROP
-A INPUT -p tcp -m tcp -s 220.181.108.151/32 -j DROP

# SSH is okay.
-A INPUT -p tcp -m tcp --dport 2286 -j ACCEPT

# HTTP is okay.
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 80 -j ACCEPT

# HTTPS is okay.
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT

# DHCP is okay.
-A INPUT -p udp --sport 67 --dport 68 -j ACCEPT
-A INPUT -p udp --sport 68 --dport 67 -j ACCEPT

# Local docker0 traffic is okay.
-A INPUT -m addrtype -p tcp -i docker0 --dst-type LOCAL -j ACCEPT

# ICMP ping is okay.
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# Everything else is not okay.
-A INPUT -j inputdrop

#
# FORWARD chain
#

# DNS responses for docker containers is okay.
-A FORWARD -m udp -p udp -i docker0 --dport 53 -j ACCEPT

# Docker forwarding is okay.
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT

# Everything else is not okay.
-A FORWARD -j forwarddrop

#
# DOCKER chain
#

-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 3000 -j ACCEPT
-A DOCKER -d 172.17.0.4/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN

#
# OUTPUT chain
#

# Local connections are okay.
-A OUTPUT -m tcp -p tcp -o lo -j ACCEPT
-A OUTPUT -m udp -p udp -o lo -j ACCEPT

# Docker output is okay.
-A OUTPUT -o docker0 -j ACCEPT

# SSH is okay.
-A OUTPUT -p tcp -m tcp --sport 2286 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 2286 -j ACCEPT

# HTTP is okay.
-A OUTPUT -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT

# HTTPS is okay.
-A OUTPUT -p tcp -m tcp --sport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT

# DHCP is okay.
-A OUTPUT -p udp --dport 67 -j ACCEPT
-A OUTPUT -p udp --dport 68 -j ACCEPT

# DNS is okay.
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT

# NTP is okay.
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT

# ICMP ping is okay.
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# Everything else it not okay.
-A OUTPUT -j outputdrop


-A forwarddrop -m limit --limit 2/min -j LOG --log-prefix "[FORWARD] drop: "
-A forwarddrop -j DROP
-A inputdrop -m limit --limit 2/min -j LOG --log-prefix "[INPUT] drop: "
-A inputdrop -j DROP
-A outputdrop -m limit --limit 2/min -j LOG --log-prefix "[OUTPUT] drop: "
-A outputdrop -j DROP


COMMIT
